v0.3.1
Added support for ProDOS disks
Added support for interleaved sectors (e.g. ProDOS disks imaged with ADT)
Added support for AWP files

V0.2.1
Added support for NADOL disks (Nibbles Away Disk Optimized Language)
Added sector viewer to dskexplorer.rb
DOS 3.3 support now more robust

V0.1.6
fixed errors in the gem package

V0.1.5
bugfix - the S-C Assembler file detect routine was sometimes getting into endless loop
added 'dskexplorer.rb'
--explode now lets an output directory be specified by --output 
added hex-dump output
bugfix - incorrect spacing in applesoft listing

V0.1.4
bugfix - errors on case-sensitive platforms (require 'YAML'=>require'yaml')
Added support for opening URLs (e.g. dsktool.rb -c http://jamtronix.com/dsks/apshai.dsk.gz)
Added "raw" mode (doesn't convert BASIC tokens to ASCII)

V0.1.3
Added support for gzipped files (assumes .gz extension)
Added support for S-C Assembler files
Added support for opening URIs